test: Entity Builder 제거에 따른 테스트코드 수정