@@ -2,40 +2,33 @@ package com.godlife.goalservice.repository;
 
 import com.godlife.goalservice.domain.Goal;
 import com.godlife.goalservice.domain.Mindset;
-import com.godlife.goalservice.domain.Todo;
 import com.godlife.goalservice.domain.TodoTask;
 import com.godlife.goalservice.domain.enums.Category;
 import com.godlife.goalservice.domain.enums.RepetitionType;
-import com.godlife.goalservice.service.dto.GoalTodoScheduleDto;
-import org.junit.jupiter.api.BeforeEach;
+import com.godlife.goalservice.service.dto.TodoScheduleCountDto;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
-import org.springframework.test.annotation.Commit;
 
+import javax.persistence.EntityManager;
 import java.time.LocalDate;
 import java.time.YearMonth;
 import java.time.format.DateTimeFormatter;
+import java.util.Collections;
 import java.util.List;
 import java.util.NoSuchElementException;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 @AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
-@Commit
 @DataJpaTest
 class GoalRepositoryTest {
     @Autowired
     GoalRepository goalRepository;
-
-
-
-    @BeforeEach
-    void beforeEach() {
-
-    }
+    @Autowired
+    EntityManager em;
 
 //    @Test
     void save() {
@@ -46,15 +39,23 @@ class GoalRepositoryTest {
         Mindset mindset1 = createMindsetByContent("마인드셋1");
         Mindset mindset2 = createMindsetByContent("마인드셋2");
 
-        Todo todo1 = TodoTask.builder()
-                .title("투두태스크1")
-                .build();
+        TodoTask todoTask = TodoTask.createTodoTask(
+                "todo",
+                1,
+                0,
+                LocalDate.parse("20221001", DateTimeFormatter.ofPattern("yyyyMMdd")),
+                LocalDate.parse("20221031", DateTimeFormatter.ofPattern("yyyyMMdd")),
+                RepetitionType.MONTH,
+                List.of("1", "13", "21"));
 
-        goal = Goal.builder()
-                .title(expectedTitle)
-                .userId(1L)
-                .mindsets(List.of(mindset1, mindset2))
-                .build();
+        goal = Goal.createGoal(
+                1L,
+                Category.CAREER,
+                expectedTitle,
+                1,
+                List.of(mindset1, mindset2),
+                Collections.emptyList()
+        );
         //when
         Goal savedGoal = goalRepository.save(goal);
 
@@ -62,26 +63,38 @@ class GoalRepositoryTest {
         assertThat(savedGoal.getTitle()).isEqualTo(expectedTitle);
     }
 
-//    @Test
+    @Test
     void findById() {
-        Goal goal;
-        String expectedTitle;
-        expectedTitle = "목표제목이다";
+        //given
+        String expectedTitle = "목표제목이다";
 
         Mindset mindset1 = createMindsetByContent("마인드셋1");
         Mindset mindset2 = createMindsetByContent("마인드셋2");
 
-        Todo todo1 = TodoTask.builder()
-                .title("투두태스크1")
-                .build();
+        TodoTask todoTask = TodoTask.createTodoTask(
+                "todo",
+                1,
+                0,
+                LocalDate.parse("20221001", DateTimeFormatter.ofPattern("yyyyMMdd")),
+                LocalDate.parse("20221031", DateTimeFormatter.ofPattern("yyyyMMdd")),
+                RepetitionType.MONTH,
+                List.of("1", "13", "21"));
 
-        goal = Goal.builder()
-                .title(expectedTitle)
-                .userId(1L)
-                .mindsets(List.of(mindset1, mindset2))
-                .build();
+        Goal goal = Goal.createGoal(
+                1L,
+                Category.CAREER,
+                expectedTitle,
+                1,
+                List.of(mindset1, mindset2),
+                List.of(todoTask)
+        );
+
         //when
         Goal savedGoal = goalRepository.save(goal);
+
+        em.flush();
+        em.clear();
+
         Goal foundGoal = goalRepository.findById(savedGoal.getGoalId()).orElseThrow(NoSuchElementException::new);
 
         //then
@@ -90,9 +103,7 @@ class GoalRepositoryTest {
     }
 
     private static Mindset createMindsetByContent(String content) {
-        return Mindset.builder()
-                .content(content)
-                .build();
+        return Mindset.createMindset(content);
     }
     
     @Test
@@ -101,27 +112,28 @@ class GoalRepositoryTest {
         //given
         Mindset mindset1 = createMindsetByContent("사는건 레벨업이 아닌 스펙트럼을 넓히는 거란 얘길 들었다. 어떤 말보다 용기가 된다.");
 
-        Todo todo1 = TodoTask.builder()
-                .title("포트폴리오 완성")
-                .startDate(LocalDate.parse("20220923", DateTimeFormatter.ofPattern("yyyyMMdd")))
-                .endDate(LocalDate.parse("20221123", DateTimeFormatter.ofPattern("yyyyMMdd")))
-                .repetitionType(RepetitionType.DAY)
-                .orderNumber(1)
-                .depth(1)
-                .build();
+        TodoTask todoTask = TodoTask.createTodoTask("todo",
+                1,
+                0,
+                LocalDate.parse("20221001", DateTimeFormatter.ofPattern("yyyyMMdd")),
+                LocalDate.parse("20221031", DateTimeFormatter.ofPattern("yyyyMMdd")),
+                RepetitionType.DAY,
+                Collections.emptyList()
+        );
 
-        Goal goal = Goal.builder()
-                .title("이직하기")
-                .category(Category.CAREER)
-                .userId(1L)
-                .mindsets(List.of(mindset1))
-                .todos(List.of(todo1))
-                .build();
+        Goal goal = Goal.createGoal(
+                1L,
+                Category.CAREER,
+                "이직하기",
+                1,
+                List.of(mindset1),
+                List.of(todoTask)
+        );
 
         Goal savedGoal = goalRepository.save(goal);
 
         //when
-        List<GoalTodoScheduleDto> result = goalRepository.findDailyTodosCount(1L, YearMonth.of(2022, 10));
+        List<TodoScheduleCountDto> result = goalRepository.findDailyTodosCount(1L, YearMonth.of(2022, 10));
 
         //then
         assertThat(result.size()).isEqualTo(31);
